--- a/stylish.html
+++ b/stylish.html
@@ -17,7 +17,12 @@
     <div id="short">
         <h3>This is a list of Fruits</h3>
         <ul>
-            Banana
+            <li> Banana</li>
+            <li>Apple</li>
+            <li>Strawberry</li>
+            <li>Grape</li>
+            <li>Blueberry</li>
+
         </ul>
     </div>
 </body>
